--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "2.0.0-beta.11",
+    "@ai-sdk/react": "2.0.0-beta.25",
     "@eslint/compat": "^1.3.1",
     "@hookform/resolvers": "^5.1.1",
     "@next/eslint-plugin-next": "^15.4.3",
@@ -16,6 +18,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "ai": "5.0.0-beta.25",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-import": "^2.32.0",
@@ -28,7 +31,8 @@
     "react-hook-form": "^7.61.0",
     "tailwind-merge": "^3.3.1",
     "typescript-eslint": "^8.38.0",
-    "zod": "^4.0.8"
+    "zod": "^4.0.8",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
